--- a/5-diffusion.tex
+++ b/5-diffusion.tex
@@ -285,35 +285,38 @@ Breadth-first search
 
 \subsection{Preliminary results}
 
-\subsection{Visualization tool}
-
-\todo{Take some examples for the vizualisation with comparison to the pore size and diffusion coefficient}
-
-\subsection{Development of a first prediction model}
-
-\begin{figure}[ht]
-  \centering
-    \includegraphics[width=0.48\textwidth]{figures/5-diffusion/diffusion_prediction.pdf}
-    \caption{}\label{fgr:}
-\end{figure}
-
-\begin{figure}[ht]
-  \centering
-    \includegraphics[width=0.48\textwidth]{figures/5-diffusion/difflog_barrier_Df_uff.pdf}
-    \includegraphics[width=0.48\textwidth]{figures/5-diffusion/difflog_barrier_Df_uff_2.pdf}
-    \caption{}\label{fgr:}
-\end{figure}
+\todo{Barrier energy}
 
 \begin{figure}[ht]
   \centering
     \includegraphics[width=0.48\textwidth]{figures/5-diffusion/difflog_Df-ccdc_barrier.pdf}
     \includegraphics[width=0.48\textwidth]{figures/5-diffusion/difflog_Df-uff298K_barrier.pdf}
-    \caption{}\label{fgr:}
+    \caption{}\label{fgr:diff_pld_barrier}
 \end{figure}
 
-ML descriptors
+Explains the difference in diffusivity values for mateirals with a PLD superior to \SI{6}{\angstrom}
+\begin{figure}[ht]
+  \centering
+    \includegraphics[width=0.48\textwidth]{figures/5-diffusion/difflog_barrier_Df_uff.pdf}
+    \includegraphics[width=0.48\textwidth]{figures/5-diffusion/difflog_barrier_Df_uff_2.pdf}
+    \caption{}\label{fgr:barrier_diffusion}
+\end{figure}
 
-Chann dim
+\subsection{Visualization tool}
+
+\todo{Take some examples for the vizualisation with comparison to the pore size and diffusion coefficient}
+
+\section{First ML prediction Model}
+
+
+
+\textbf{Performances}
+
+\begin{figure}[ht]
+  \centering
+    \includegraphics[width=0.48\textwidth]{figures/5-diffusion/diffusion_prediction.pdf}
+    \caption{}\label{fgr:diffusion_pred}
+\end{figure}
 
 
 \textbf{Next steps}
