--- a/thesis.bib
+++ b/thesis.bib
@@ -3570,3 +3570,53 @@ URL = {https://doi.org/10.1137/0216006},
 	title = {Virtual Screening of Nanoporous Materials for Noble Gas Separation},
 	journal = {ACS Appl. Nano Mater.}
 }
+@article{Lin_2005,
+	doi = {10.1103/physrevlett.94.216001},
+	url = {https://doi.org/10.1103%2Fphysrevlett.94.216001},
+	year = 2005,
+	month = {jun},
+	publisher = {American Physical Society ({APS})},
+	volume = {94},
+	number = {21},
+	author = {Binhua Lin and Mati Meron and Bianxiao Cui and Stuart A. Rice and Haim Diamant},
+	title = {From Random Walk to Single-File Diffusion},
+	journal = {Phys. Rev. Lett.}
+}
+@article{Krishna_2010,
+	doi = {10.1016/j.memsci.2010.05.032},
+	url = {https://doi.org/10.1016%2Fj.memsci.2010.05.032},
+	year = 2010,
+	month = {sep},
+	publisher = {Elsevier {BV}},
+	volume = {360},
+	number = {1-2},
+	pages = {323--333},
+	author = {Rajamani Krishna and Jasper M. van Baten},
+	title = {In silico screening of zeolite membranes for {CO}$_2$ capture},
+	journal = {Journal of Membrane Science}
+}
+@article{Abrahams_2014,
+	doi = {10.1021/ic403134c},
+	url = {https://doi.org/10.1021%2Fic403134c},
+	year = 2014,
+	month = {may},
+	publisher = {American Chemical Society ({ACS})},
+	volume = {53},
+	number = {10},
+	pages = {4956--4969},
+	author = {Brendan F. Abrahams and A. David Dharma and Martin J. Grannas and Timothy A. Hudson and Helen E. Maynard-Casely and Graham R. Oliver and Richard Robson and Keith F. White},
+	title = {Isomeric Ionic Lithium Isonicotinate Three-Dimensional Networks and Single-Crystal-to-Single-Crystal Rearrangements Generating Microporous Materials},
+	journal = {Inorg. Chem.}
+}
+@article{Tong_2013,
+	doi = {10.1039/c3cc47241h},
+	url = {https://doi.org/10.1039%2Fc3cc47241h},
+	year = 2013,
+	publisher = {Royal Society of Chemistry ({RSC})},
+	volume = {49},
+	number = {96},
+	pages = {11287},
+	author = {Xiaoqiang Tong and Wenfu Yan and Jihong Yu and Ruren Xu},
+	title = {A chiral open-framework fluoroaluminophosphate with enantiomeric excess in the bulk product},
+	journal = {Chem. Commun.}
+}
